--- a/over_ons.html
+++ b/over_ons.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ezone-contacten x</title>
+  <title>Ezone-contacten</title>
   <link rel="stylesheet" href="over_ons.css">
 </head>
 <body>
