--- a/OpdrachtExamen1.html
+++ b/OpdrachtExamen1.html
@@ -6,6 +6,15 @@
     <title>fase 3</title>
 </head>
 <body>
+    <header>
+        <nav>
+         <ul>
+            <li><a href=#HOME>HOME</a></li>
+            <li><a href=#Product>PRODUCT</a></li>
+            <li><a href=#CONTACT>CONTACT</a></li>
+         </ul>
+        </nav>
+    </header>
     
 </body>
 </html>
