--- a/ProductMenu.html
+++ b/ProductMenu.html
@@ -6,6 +6,20 @@
   <title>Product</title>
 </head>
 <body>
-  
+  <header>
+    <h1>Tempora</h1>
+    <nav>
+      <ul>
+        <li><a href=#HOME>HOME</a></li>
+        <li><a href=#Product>PRODUCT</a></li>
+        <li><a href=#CONTACT>CONTACT</a></li>
+        <li><a href="#about us">ABOUT US</a></li>
+      </ul>
+     </nav>
+    <form action="/search" method="get">
+      <input type="text" name="query" placeholder="Zoek iets...">
+      <button type="submit">Zoeken</button>
+    </form>
+  </header>
 </body>
 </html>
