--- a/OpdrachtExamen1.html
+++ b/OpdrachtExamen1.html
@@ -7,14 +7,21 @@
 </head>
 <body>
     <header>
-        <nav>
-         <ul>
-            <li><a href=#HOME>HOME</a></li>
-            <li><a href=#Product>PRODUCT</a></li>
-            <li><a href=#CONTACT>CONTACT</a></li>
-         </ul>
-        </nav>
+      <h1>Tempora</h1>
+      <nav>
+        <ul>
+          <li><a href=#HOME>HOME</a></li>
+          <li><a href=#Product>PRODUCT</a></li>
+          <li><a href=#CONTACT>CONTACT</a></li>
+          <li><a href=#aboutus>ABOUT US</a></li>
+        </ul>
+       </nav>
+
+      <form action="/search" method="get">
+        <input type="text" name="query" placeholder="Zoek iets...">
+        <button type="submit">Zoeken</button>
+      </form>
+      
     </header>
-    
-</body>
+  </body>
 </html>
