--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="Homepage.Css">
 </head>
 <body>
-    <header>
+    <header class="navbar">
       <h1>Tempora</h1>
       <nav>
         <ul>
@@ -18,7 +18,7 @@
         </ul>
        </nav>
 
-      <form action="/search" method="get">
+      <form class="navbar-search">
         <input type="text" name="query" placeholder="Zoek iets...">
         <button type="submit">Zoeken</button>
       </form>
