--- a/ProductMenu.html
+++ b/ProductMenu.html
@@ -4,16 +4,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Product</title>
+  <link rel="stylesheet" href="Product.css">
 </head>
 <body>
   <header>
     <h1>Tempora</h1>
-    <nav>
+    <nav class="navbar">
       <ul>
         <li><a href=#HOME>HOME</a></li>
         <li><a href=#Product>PRODUCT</a></li>
         <li><a href=#CONTACT>CONTACT</a></li>
-        <li><a href="#about us">ABOUT US</a></li>
+        <li><a href=#about-us>ABOUT US</a></li>
       </ul>
      </nav>
     <form action="/search" method="get">
@@ -21,5 +22,7 @@
       <button type="submit">Zoeken</button>
     </form>
   </header>
+  <img src="promo.jpg" alt="promo">
+  <img src="rolex_png.png" alt="Rolex submarine date" width="100">
 </body>
 </html>
