--- a/index.html
+++ b/index.html
@@ -7,21 +7,24 @@
     <link rel="stylesheet" href="Homepage.Css">
 </head>
 <body>
-    <header class="navbar">
-      <h1>Tempora</h1>
-      <nav>
+    <header>
+      <nav class="navbar">
+        <h1>Tempora</h1>
+
         <ul>
           <li><a href=#HOME>HOME</a></li>
           <li><a href=#Product>PRODUCT</a></li>
           <li><a href=#CONTACT>CONTACT</a></li>
           <li><a href=#aboutus>ABOUT US</a></li>
         </ul>
-       </nav>
+       
 
-      <form class="navbar-search">
-        <input type="text" name="query" placeholder="Zoek iets...">
-        <button type="submit">Zoeken</button>
-      </form>
+       <form class="navbar-search">
+         <input type="text" name="query" placeholder="Zoek iets...">
+         <button type="submit">Zoeken</button>
+       </form>
+
+      </nav>
       
     </header>
   </body>
