--- a/ProductMenu.html
+++ b/ProductMenu.html
@@ -9,21 +9,22 @@
 </head>
 <body>
   <header>
-    <h1>Tempora</h1>
     <nav class="navbar">
+      <h1>Tempora</h1>
       <ul>
-        <li><a href=#HOME>HOME</a></li>
-        <li><a href=#Product>PRODUCT</a></li>
-        <li><a href=#CONTACT>CONTACT</a></li>
-        <li><a href=#about-us>ABOUT US</a></li>
+        <li><a href="#HOME">HOME</a></li>
+        <li><a href="#Product">PRODUCT</a></li>
+        <li><a href="#CONTACT">CONTACT</a></li>
+        <li><a href="#aboutus">ABOUT US</a></li>
       </ul>
-     </nav>
-    <form action="/search" method="get">
-      <input type="text" name="query" placeholder="Zoek iets...">
-      <button type="submit">Zoeken</button>
-    </form>
+      <form class="navbar-search">
+        <input type="text" name="query" placeholder="Zoek iets...">
+        <button type="submit">Zoeken</button>
+        <i class="fas fa-cart-plus mirrored-icon"></i>
+      </form>
+    </nav>
   </header>
-  <img src="promo.jpg" alt="promo">
+  <img class="promo" src="promo.jpg" alt="promo">
   <img src="rolex_png.png" alt="Rolex submarine date" width="100">
 </body>
 </html>
