--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>fase 3</title>
     <link rel="stylesheet" href="Homepage.Css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 <body>
     <header>
@@ -22,10 +23,10 @@
        <form class="navbar-search">
          <input type="text" name="query" placeholder="Zoek iets...">
          <button type="submit">Zoeken</button>
+         <i class="fas fa-cart-plus mirrored-icon"></i>
        </form>
-
+       
       </nav>
-      
     </header>
   </body>
 </html>
