--- a/ProductMenu.html
+++ b/ProductMenu.html
@@ -12,19 +12,21 @@
     <nav class="navbar">
       <h1>Tempora</h1>
       <ul>
-        <li><a href="#HOME">HOME</a></li>
-        <li><a href="#Product">PRODUCT</a></li>
+        <li><a href="index.html">HOME</a></li>
+        <li><a href="ProductMenu.html">PRODUCT</a></li>
         <li><a href="#CONTACT">CONTACT</a></li>
         <li><a href="#aboutus">ABOUT US</a></li>
       </ul>
       <form class="navbar-search">
         <input type="text" name="query" placeholder="Zoek iets...">
         <button type="submit">Zoeken</button>
-        <i class="fas fa-cart-plus mirrored-icon"></i>
+        <i class="fas fa-shopping-basket"></i>
       </form>
     </nav>
   </header>
-  <img class="promo" src="promo.jpg" alt="promo">
-  <img src="rolex_png.png" alt="Rolex submarine date" width="100">
+  <section class="images">
+    <img class="promo" src="promo.jpg" alt="promo">
+    <img class="rolex_png" src="Watch.webp" alt="Rolex submarine date" width="100">
+  </section>
 </body>
 </html>
