--- a/ProductMenu.html
+++ b/ProductMenu.html
@@ -25,8 +25,12 @@
     </nav>
   </header>
   <section class="images">
-    <img class="promo" src="promo.jpg" alt="promo">
-    <img class="rolex_png" src="Watch.webp" alt="Rolex submarine date" width="100">
+    <img class="promo" src="Watch.webp" alt="Rolex submarine date" width="1200">
+    <div class="producten">
+    <img src="rolex.png" alt="rolex" width="250">
+    <img src="lederwatch.png" alt="LederenWatch">
+    <img src="gold.png" alt="Golden Rolex" width="250">
+    </div>
   </section>
 </body>
 </html>
