--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <h1>Tempora</h1>
 
         <ul>
-          <li><a href=#HOME>HOME</a></li>
-          <li><a href=#Product>PRODUCT</a></li>
+          <li><a href=Index.html>HOME</a></li>
+          <li><a href=ProductMenu.html>PRODUCT</a></li>
           <li><a href=#CONTACT>CONTACT</a></li>
           <li><a href=#aboutus>ABOUT US</a></li>
         </ul>
