Video en Navbar

--- a/index.html
+++ b/index.html
@@ -23,10 +23,29 @@
        <form class="navbar-search">
          <input type="text" name="query" placeholder="Zoek iets...">
          <button type="submit">Zoeken</button>
-         <i class="fas fa-cart-plus mirrored-icon"></i>
+         <i class="fas fa-shopping-basket"></i>
        </form>
        
       </nav>
     </header>
+
+    <main>
+      <video autoplay loop muted plays-inline class="background-clip">
+        <source src="WatchVideo.mp4" type="video/mp4">
+      </video>
+
+
+      <div class="background">
+        <div class="Video">
+          <h1> EXPLORE OUR WATCHES</h1>
+          <a href=ProductMenu.html>more info</a>
+
+        </div>
+
+
+      </div>
+
+
+    </main>
   </body>
 </html>
