--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
       <nav class="navbar">
-        <h1>Tempora</h1>
+        <h1 class="title">Tempora</h1>
 
         <ul>
           <li><a href=Index.html>HOME</a></li>
