--- a/ProductMenu.html
+++ b/ProductMenu.html
@@ -27,9 +27,38 @@
   <section class="images">
     <img class="promo" src="Watch.webp" alt="Rolex submarine date" width="1200">
     <div class="producten">
-    <img src="rolex.png" alt="rolex" width="250">
-    <img src="lederwatch.png" alt="LederenWatch">
-    <img src="gold.png" alt="Golden Rolex" width="250">
+      <div class="product-item">
+        <img src="rolex.png" alt="Rolex">
+        <div class="product-info">
+          <p class="product-name">Rolex Submariner</p>
+          <p class="product-price">€7.500</p>
+          <button class="buy-button">Kopen</button>
+        </div>
+      </div>
+      <div class="product-item">
+        <img src="lederwatch.png" alt="Lederen Watch">
+        <div class="product-info">
+          <p class="product-name">Lederen Classic</p>
+          <p class="product-price">€1.200</p>
+          <button class="buy-button">Kopen</button>
+        </div>
+      </div>
+      <div class="product-item">
+        <img src="gold.png" alt="Golden Rolex">
+        <div class="product-info">
+          <p class="product-name">Golden Rolex</p>
+          <p class="product-price">€18.000</p>
+          <button class="buy-button">Kopen</button>
+        </div>
+      </div>
+      <div class="product-item">
+        <img src="sport.webp" alt="Sport Watch">
+        <div class="product-info">
+          <p class="product-name">Sporty Elegance</p>
+          <p class="product-price">€2.500</p>
+          <button class="buy-button">Kopen</button>
+        </div>
+      </div>
     </div>
   </section>
 </body>
