bijna klaar eindelijk

--- a/ProductMenu.html
+++ b/ProductMenu.html
@@ -14,7 +14,7 @@
       <ul>
         <li><a href="index.html">HOME</a></li>
         <li><a href="ProductMenu.html">PRODUCT</a></li>
-        <li><a href="#CONTACT">CONTACT</a></li>
+        <li><a href="Contact.html">CONTACT</a></li>
         <li><a href="#aboutus">ABOUT US</a></li>
       </ul>
       <form class="navbar-search">
