--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <ul>
           <li><a href=Index.html>HOME</a></li>
           <li><a href=ProductMenu.html>PRODUCT</a></li>
-          <li><a href=#CONTACT>CONTACT</a></li>
+          <li><a href=Contact.html>CONTACT</a></li>
           <li><a href=#aboutus>ABOUT US</a></li>
         </ul>
        
