--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>fase 3</title>
     <link rel="stylesheet" href="Homepage.Css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <link rel="stylesheet" href="Product.css">
 </head>
 <body>
     <header>
@@ -30,7 +31,7 @@
     </header>
 
     <main>
-      <video autoplay loop muted plays-inline class="background-clip">
+      <video autoplay loop muted class="background-clip">
         <source src="WatchVideo.mp4" type="video/mp4">
       </video>
 
@@ -39,11 +40,48 @@
         <div class="Video">
           <h1> EXPLORE OUR WATCHES</h1>
           <a href=ProductMenu.html>more info</a>
+        </div>
+      </div>
+
+      <section class="categorie">
+
+        <h1 class="Title-Cat"> CATEGORIE </h1>
+         <div class="wrapper"> 
+          <div class="Image">
+            <img src="Cat.Watch.avif" alt="Rolex">
+            <div class="text">
+              <h1>ICE</h1>
+            </div>
+          </div>
+         </div>
+         <div class="wrapper2"> 
+          <div class="Image2">
+            <img src="Rolex.Sah.jpg" alt="Rolex2">
+            <div class="text2">
+              <h1>SAHARA</h1>
+            </div>
+          </div>
+         </div>
+      </section>
+
+      <section>
+        <h1> Our recomandation</h1>
+  
+    <div class="producten">
+      <div class="product-item">
+        <img src="rolex.png" alt="Rolex">
+        <div class="product-info">
+          <p class="product-name">Rolex Submariner</p>
+        </div>
+      </div>
+      <div class="product-item">
+        <img src="sport.webp" alt="Golden Rolex">
+        <div class="product-info">
+          <p class="product-name">Golden Rolex</p>
 
         </div>
-
-
-      </div>
+      </section>
+    
 
 
     </main>
