--- a/Contact.html
+++ b/Contact.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tempora - Contact</title>
   <link rel="stylesheet" href="Contact.css">
+  <script src="https://kit.fontawesome.com/a076d05399.js"></script>
   <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_GOOGLE_MAPS_API_KEY&callback=initMap" async defer></script>
 </head>
 <body>
@@ -38,5 +39,20 @@
         <button type="submit">Verstuur</button>
       </form>
     </div>
+  </main>
+  <footer>
+    <ul>
+      <li><a href="index.html">HOME</a></li>
+      <li><a href="ProductMenu.html">PRODUCT</a></li>
+      <li><a href="Contact.html">CONTACT</a></li>
+      <li><a href="#aboutus">ABOUT US</a></li>
+    </ul>
+    <div class="social-media">
+      <a href="https://instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
+      <a href="https://facebook.com" target="_blank"><i class="fab fa-facebook"></i></a>
+      <a href="https://twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
+    </div>
+    <p>&#169; 2024 Tempora. Alle rechten voorbehouden.</p>
+  </footer>
 </body>
 </html>
