--- a/ProductMenu.html
+++ b/ProductMenu.html
@@ -17,11 +17,6 @@
         <li><a href="Contact.html">CONTACT</a></li>
         <li><a href="#aboutus">ABOUT US</a></li>
       </ul>
-      <form class="navbar-search">
-        <input type="text" name="query" placeholder="Zoek iets...">
-        <button type="submit">Zoeken</button>
-        <i class="fas fa-shopping-basket"></i>
-      </form>
     </nav>
   </header>
   <section class="images">
@@ -61,5 +56,15 @@
       </div>
     </div>
   </section>
+
+  <footer>
+    <ul>
+      <li><a href="index.html">HOME</a></li>
+      <li><a href="ProductMenu.html">PRODUCT</a></li>
+      <li><a href="Contact.html">CONTACT</a></li>
+      <li><a href="#aboutus">ABOUT US</a></li>
+    </ul>
+    <p>&copy; 2024 Tempora. All rights reserved.</p>
+  </footer>
 </body>
 </html>
