--- a/Contact.html
+++ b/Contact.html
@@ -15,7 +15,7 @@
         <li><a href="index.html">HOME</a></li>
         <li><a href="ProductMenu.html">PRODUCT</a></li>
         <li><a href="Contact.html">CONTACT</a></li>
-        <li><a href="#aboutus">ABOUT US</a></li>
+        <li><a href="Aboutus.html">ABOUT US</a></li>
       </ul>
       <form class="navbar-search">
         <input type="text" name="query" placeholder="Zoek iets...">
