--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+ <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>fase 3</title>
     <link rel="stylesheet" href="Homepage.Css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="Product.css">
-</head>
-<body>
+ </head>
+ <body>
     <header>
       <nav class="navbar">
         <h1 class="title">Tempora</h1>
@@ -17,7 +17,7 @@
           <li><a href=Index.html>HOME</a></li>
           <li><a href=ProductMenu.html>PRODUCT</a></li>
           <li><a href=Contact.html>CONTACT</a></li>
-          <li><a href=#aboutus>ABOUT US</a></li>
+          <li><a href=Aboutus.html>ABOUT US</a></li>
         </ul>
        
 
@@ -67,18 +67,20 @@
       <section>
         <h1> Our recomandation</h1>
   
-    <div class="producten">
-      <div class="product-item">
-        <img src="rolex.png" alt="Rolex">
-        <div class="product-info">
-          <p class="product-name">Rolex Submariner</p>
-        </div>
-      </div>
-      <div class="product-item">
-        <img src="sport.webp" alt="Golden Rolex">
-        <div class="product-info">
-          <p class="product-name">Golden Rolex</p>
+        <div class="producten">
+          <div class="product-item">
+            <img src="rolex.png" alt="Rolex">
+              <div class="product-info">
+                <p class="product-name">Rolex Submariner</p>
+              </div>
+          </div>
+       </div>
+        <div class="product-item">
+          <img src="sport.webp" alt="Golden Rolex">
+            <div class="product-info">
+              <p class="product-name">Golden Rolex</p>
 
+            </div>
         </div>
       </section>
     
