--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>fase 3</title>
     <link rel="stylesheet" href="Homepage.Css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    <link rel="stylesheet" href="Product.css">
  </head>
  <body>
     <header>
@@ -63,11 +62,9 @@
           </div>
          </div>
       </section>
-
-      <section>
-        <h1> Our recomandation</h1>
   
         <div class="producten">
+          <h1> Our recomandation</h1>
           <div class="product-item">
             <img src="rolex.png" alt="Rolex">
               <div class="product-info">
@@ -82,10 +79,21 @@
 
             </div>
         </div>
-      </section>
+
     
 
 
     </main>
+    <footer>
+      <ul>
+        <li><a href="index.html">HOME</a></li>
+        <li><a href="ProductMenu.html">PRODUCT</a></li>
+        <li><a href="Contact.html">CONTACT</a></li>
+        <li><a href="#aboutus">ABOUT US</a></li>
+      </ul>
+      <p>&copy; 2024 Tempora. All rights reserved.</p>
+    </footer>
+
+
   </body>
 </html>
