--- a/Aboutus.html
+++ b/Aboutus.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-    
+
     <head>
         <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -55,6 +55,15 @@
                     </div>
                 </section>
             </main>
+            <footer>
+                <ul>
+                  <li><a href="index.html">HOME</a></li>
+                  <li><a href="ProductMenu.html">PRODUCT</a></li>
+                  <li><a href="Contact.html">CONTACT</a></li>
+                  <li><a href="#aboutus">ABOUT US</a></li>
+                </ul>
+                <p>&copy; 2024 Tempora. All rights reserved.</p>
+              </footer>
     </body>
 </html>
  
