--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
           <a href=ProductMenu.html>more info</a>
         </div>
       </div>
+      <br>
+      <h1 class="Middle-title">CATEGORIE</h1>
+      <br>
 
       <section class="categorie">
-
-        <h1 class="Title-Cat"> CATEGORIE </h1>
-         <div class="wrapper"> 
           <div class="Image">
             <img src="Cat.Watch.avif" alt="Rolex">
             <div class="text">
@@ -53,16 +53,32 @@
             </div>
           </div>
          </div>
-         <div class="wrapper2"> 
-          <div class="Image2">
-            <img src="Rolex.Sah.jpg" alt="Rolex2">
+          <div class="Image">
+            <img src="Rolex.Sah.jpg" alt="Rolex">
             <div class="text2">
               <h1>SAHARA</h1>
             </div>
           </div>
          </div>
+          <div class="Image">
+            <img src="Seiko1.webp" alt="Rolex">
+            <div class="text3">
+              <h1>MOUNTAIN</h1>
+            </div>
+          </div>
+         </div>
+         <div class="wrapper3"> 
+          <div class="Image">
+            <img src="SEiko.jpg" alt="Rolex">
+            <div class="text4">
+              <h1>JUNGLE</h1>
+            </div>
+          </div>
+         </div>
       </section>
-       <div>
+       <br>
+       <br>
+       <section>
          <H1>Our recomandation</H1>
          <br>
          <div class="producten">
@@ -76,7 +92,7 @@
           <div class="product-item">
             <img src="sport.webp" alt="Sporty Elegance">
               <div class="product-info">
-                <p class="product-name">Golden Rolex</p>
+                <p class="product-name">Sporty</p>
 
                </div>
           </div>
@@ -87,6 +103,7 @@
 
                </div>
           </div>
+
           <div class="product-item">
             <img src="gold.png" alt="Sporty Elegance">
               <div class="product-info">
@@ -94,6 +111,7 @@
 
                </div>
           </div>
+
           <div class="product-item">
             <img src="Seiko.webp" alt="Grand Seiko">
               <div class="product-info">
@@ -101,7 +119,7 @@
 
                </div>
           </div>
-        </div>  
+        </section>  
 
 
     
