--- a/Aboutus.html
+++ b/Aboutus.html
@@ -5,13 +5,14 @@
         <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>fase 3</title>
-    <link rel="stylesheet" href="Homepage.Css">
+    <link rel="stylesheet" href="Aboutus.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    <link rel="stylesheet" href="Product.css">
     </head>
 
     <body>
       <header>
+          
+           <!-- NAVBAR -->
          <nav class="navbar">
               <h1 class="title">Tempora</h1>
         
@@ -58,6 +59,9 @@
             <br>
             <br>
             <br>
+
+
+             <!-- FOOTER -->
             <footer>
                 <ul>
                   <li><a href="index.html">HOME</a></li>
