--- a/Aboutus.html
+++ b/Aboutus.html
@@ -36,11 +36,13 @@
              <main>
                  <section class="about">
                      <div class="main">
-                        <h1>TEMPORA</h1>
+                        
+                        <img src="Profiel.png" alt="">
 
                          <div class="about-text">
                             <h1>About us</h1>
                             <h5>Develepor & Designer</h5>
+                            <h6>TEMPORA</h6>
                             <br>
                             <p>At Tempora , we believe that a watch is more than just a tool to tell time—it’s a statement of style, precision, and personality. Founded with a 
                                 passion for craftsmanship and a dedication to timeless design, we are here to redefine what a watch means to you.
@@ -54,6 +56,7 @@
                                 Let us help you make every second count.
                             
                               </p>
+                              <a  href=Contact.html>lets talk</a>
                         </div>
                      </div>
                 </section>
